--- a/UdemyFormationWeb/appsettings.json
+++ b/UdemyFormationWeb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "default": "Server=PC_Paul;Database=Udemy;Trusted_Connection=True;TrustServerCertificate=True",
+    "default": "Server=tcp:udemy-formation.database.windows.net,1433;Initial Catalog=UdemyDataBase;Persist Security Info=False;User ID=sqladmin;Password=Admin123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
   }
 }
